# ObliviousTM

./: .gitignore  .gitmodules  README.md
oblivious-tm-rs/: .gitignore  Cargo.toml  README.md  graphic_viz_time.ipynb  otm.sh
oblivious-tm-rs/benches/: benchmarks.rs
oblivious-tm-rs/src/: OTM.rs  blind_array_access2d.rs  blind_array_access_2d.rs  blind_insert.rs  blind_insertion.rs  blind_permutation.rs  blind_pop.rs  blind_push.rs  blind_retrieve.rs  blind_rotation.rs  ciphertext_operations.rs  demultiplexer.rs  encrypt_instructions.rs  headers.rs  helpers.rs  key_generation.rs  main.rs  oblivious_tm.rs  oblivious_tm_tensor.rs  one_hot_slot.rs  private_insert.rs  resultats_step.txt  test_glwe.rs  unitest_baacc2d.rs  unitest_sample_extract.rs
