[package]
name = "oblivious-tm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


tfhe = { version = "0.1.9", features = [ "boolean", "shortint", "aarch64-unix" ] }
num-complex = "0.4.0"
arrayvec = "0.7.2"
aligned-vec = "0.5.0"
# aligned_vec = "0.4.0"
