[package]
name = "oblivious-tm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


tfhe = { version = "0.3.1", features = [ "boolean", "shortint", "aarch64-unix" ] }
num-complex = "0.4.0"
arrayvec = "0.7.2"
aligned-vec = "0.5.0"
rayon = "1.6.1"
concrete-csprng = "0.3.0"
dyn-stack = "0.9.0"
itertools = "0.10.5"
concrete-fft = "0.2.1"
revolut = { git = "https://github.com/sofianeazogagh/revoLUT.git", branch = "main" }


# [dev-dependencies]
# criterion = "0.3"

# [[bench]]
# name = "benchmarks"
# harness = false